change name result

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>service-passguard</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
